# XENOX-OS

./: CMakeLists.txt  Doxyfile  README.md  build.sh  disk.asm  gdt.asm  kernel-entry.asm  kernel.c  makefile  mbr.asm  switch-to-32bit.asm
ISO/: CMakeLists.txt  iso.sh
Kernel/: CMakeLists.txt  atoi.c  boot.c  ctype.c  enc.c  encapsule.h  errno.c  grafics.c  isr.c  kb.c  kprintf.c  login.c  login.h  math.c  mktime.c  panic.c  pwd.c  shell.c  shell.h  sleep.c  stack.c  stdio.c  syscalls.c  syscalls.h  timer.c
boot/: boot.asm
fs/: fs.c  fs.h
grub/: grub.cfg
include/: errno.h  es.h  graphics.h  isr.h  keyboard.h  limits.h  math.h  pwd.h  stdarg.h  stdbool.h  stddef.h  stdint.h  stdio.h  stdlib.h  string.h  time.h  timer.h  utime.h
include/Core/: crypt.h  hash.h  lzw.h  queue.h  stack.h  unzip.c  utils.h
include/GUI/: xenoxbase.h
include/asm/: io.h  memory.h
include/net/: socket.h
include/sys/: enc.h  sys.h  system.h
include/xenox/: queue.h  stack.h  sys.h
kernel/: kernel.c
lib/: errno.c  hash.c  queue.c  stack.c  unzip.c
xenoxroot/: CMakeLists.txt
