PROJECT(NextDivel-src ASM C)

ENABLE_LANGUAGE(ASM-ATT)
#ENABLE_LANGUAGE(ASM_NASM)

FILE(GLOB ASM_START "kernel/*.asm")
FILE(GLOB C_START "kernel/*.c")
SET(SRC_START ${ASM_START} ${CXX_START})
SET(CMAKE_ASM-ATT_FLAGS "--32")
SET(CMAKE_CXX_FLAGS ${CMAKE_CXX_FLAGS} "-m32")
SET(CMAKE_EXE_LINKER_FLAGS "-T${CMAKE_SOURCE_DIR}/kernel/link.ld -std=c++11 -nostdlib -fPIC -ffreestanding -lgcc")
ADD_DEFINITIONS("-DXENOX")
INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/include/sys)
INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/include/xenox)
INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/include)

ADD_EXECUTABLE(START.ELF ${SRC_START})
INSTALL(TARGETS START.ELF DESTINATION boot)
